## process this file with automake to produce Makefile.in

@SET_MAKE@

AUTOMAKE_OPTIONS = foreign no-dependencies

libdocdir = $(datadir)/kroc/doc/lib
dist_libdoc_DATA = \
	blackboard.inc \
	college.lbb \
	control_info.inc \
	controller.occ \
	crew_test.occ \
	display.inc \
	display.occ \
	philosopher.occ \
	timekeeper.occ
