## process this file with automake to produce Makefile.in

@SET_MAKE@

AUTOMAKE_OPTIONS = foreign no-dependencies

scdocdir = $(datadir)/kroc/doc/sc
dist_scdoc_DATA = \
	blackboard.inc \
	control_info.inc \
	controller.occ \
	crew_test.occ \
	display.inc \
	display.occ \
	philosopher.occ \
	timekeeper.occ
